# ccft-pymarkdown

./: .asciidoctorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint  README.adoc  README.md  pyproject.toml
.asciidoctor/: base-theme.yml
.github/: CODEOWNERS  renovate.json
.github/workflows/: build_and_publish_package.yaml  check-build-publish.yaml  publish-pypi-redirects.yaml  tests.yaml
.pypi-redirects/CCFT-PyMarkdownlnt/: pyproject.toml
.pypi-redirects/RCFT-PyMarkdown/: pyproject.toml
ccft_pymarkdown/: __init__.py  __main__.py  _clean.py  _restore.py  _scan.py  clean.py  clean_custom_formatted_tables.py  console.py  context_manager.py  restore.py  restore_files.py
ccft_pymarkdown/utils/: __init__.py  click_logging.py
rcft_pymarkdown/: __init__.py  __main__.py  console.py  context_manager.py  remove_custom_formatted_tables.py  restore_custom_formatted_tables.py
rcft_pymarkdown/utils/: __init__.py
tests/: __init__.py  test_console.py
